--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,51 +1,28 @@
-# Use the official Python image from the Docker Hub
-FROM python:3.12.5-slim
+FROM python:3.11-slim
 
-# Set environment variables
-ENV PYTHONDONTWRITEBYTECODE 1
-ENV PYTHONUNBUFFERED 1
-
-# Set the working directory
-WORKDIR /app
-
-# Install system dependencies for Chrome and ChromeDriver
+# Install system dependencies
 RUN apt-get update && apt-get install -y \
-    wget \
-    unzip \
-    curl \
-    gnupg2 \
-    && curl -sSL https://dl.google.com/linux/linux_signing_key.pub | apt-key add - \
-    && echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list \
-    && apt-get update \
-    && apt-get install -y google-chrome-stable \
-    && apt-get install -y \
-    libnss3 \
-    libgconf-2-4 \
-    && apt-get clean \
+    chromium \
+    chromium-driver \
+    tesseract-ocr \
+    libtesseract-dev \
     && rm -rf /var/lib/apt/lists/*
 
-# Install ChromeDriver
-RUN CHROME_VERSION=$(google-chrome --version | grep -oP '[0-9.]+' | head -1) && \
-    CHROMEDRIVER_VERSION=$(curl -s "https://chromedriver.storage.googleapis.com/LATEST_RELEASE_$CHROME_VERSION") && \
-    if [ -z "$CHROMEDRIVER_VERSION" ]; then echo "ChromeDriver version not found for Chrome $CHROME_VERSION"; exit 1; fi && \
-    wget -q "https://chromedriver.storage.googleapis.com/$CHROMEDRIVER_VERSION/chromedriver_linux64.zip" -O chromedriver.zip && \
-    unzip chromedriver.zip && \
-    mv chromedriver /usr/local/bin/ && \
-    chmod +x /usr/local/bin/chromedriver && \
-    rm chromedriver.zip
+# Set working directory
+WORKDIR /app
 
-# Copy the requirements file and install Python dependencies
+# Copy requirements and install
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the rest of your application code
+# Copy project files
 COPY . .
 
-# Collect static files (if needed)
+# Collect static files
 RUN python manage.py collectstatic --noinput
 
-# Expose the port your app runs on
+# Expose port
 EXPOSE 8000
 
-# Command to run your application
-CMD ["gunicorn", "main.asgi:application", "-k", "uvicorn.workers.UvicornWorker", "--bind", "0.0.0.0:8000"]
+# Run Gunicorn
+CMD ["gunicorn", "--bind", "0.0.0.0:8000", "vtu_scraper.wsgi:application"]
