Fix psycopg2 build error with libpq-dev

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,6 +6,9 @@ RUN apt-get update && apt-get install -y \
     chromium-driver \
     tesseract-ocr \
     libtesseract-dev \
+    libpq-dev \
+    gcc \
+    python3-dev \
     && rm -rf /var/lib/apt/lists/*
 
 # Set working directory
@@ -13,7 +16,10 @@ WORKDIR /app
 
 # Copy requirements and install
 COPY requirements.txt .
-RUN pip install -r requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
+
+# Clean up build dependencies to reduce image size
+RUN apt-get purge -y gcc python3-dev && apt-get autoremove -y
 
 # Copy project files
 COPY . .
